--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/ternanet/amdshim.git"
-  },  
+  },
   "devDependencies": {
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.4",
@@ -23,16 +23,16 @@
     "babel-preset-stage-0": "^6.5.0",
     "bundle-loader": "^0.5.4",
     "css-loader": "^0.24.0",
+    "debug": "^2.2.0",
+    "draft-js-export-html": "^0.4.0",
     "ejs-loader": "^0.2.1",
     "raw-loader": "^0.5.1",
     "react": "^15.3.1",
+    "react-color": "^2.2.2",
     "style-loader": "^0.13.1",
+    "velocity-react": "^1.1.5",
     "webpack": "^1.13.1",
     "webpack-merge": "^0.12.0",
-
-    "draft-js-export-html": "^0.4.0",
-    "react-color": "^2.2.2",
-    "velocity-react": "^1.1.5"
-
+    "webrtc-adapter": "^2.0.3"
   }
 }
