--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "amdshim",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "build": "webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "TernaNet",
@@ -13,26 +14,27 @@
     "url": "https://github.com/ternanet/amdshim.git"
   },
   "devDependencies": {
-    "babel-core": "^6.13.2",
+    "babel-core": "^6.17.0",
     "babel-loader": "^6.2.4",
-    "babel-plugin-transform-async-to-generator": "^6.8.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.11.5",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-plugin-transform-async-to-generator": "^6.16.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.16.0",
+    "babel-plugin-transform-object-rest-spread": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
     "bundle-loader": "^0.5.4",
     "css-loader": "^0.24.0",
     "debug": "^2.2.0",
     "draft-js-export-html": "^0.4.0",
     "ejs-loader": "^0.2.1",
     "raw-loader": "^0.5.1",
-    "react": "^15.3.1",
-    "react-color": "^2.2.2",
+    "react": "^15.3.2",
+    "react-color": "^2.3.2",
+    "react-lazyload": "^2.1.6",
     "style-loader": "^0.13.1",
-    "velocity-react": "^1.1.5",
+    "velocity-react": "^1.1.7",
     "webpack": "^1.13.1",
     "webpack-merge": "^0.12.0",
-    "webrtc-adapter": "^2.0.3"
+    "webrtc-adapter": "^2.0.4"
   }
 }
